--- a/src/index.html
+++ b/src/index.html
@@ -6,16 +6,23 @@
   <title>AllTakafulAdmin</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
   <!-- NGX Bootstrap -->
-  <link  href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"  rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
   <!-- Font Awesome CDN -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+  <!-- Custom Styles -->
+  <link rel="stylesheet" type="text/css" href="assets/css/app.min.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/components.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/custom.css">
 </head>
 
 <body>
   <app-root></app-root>
+  <!-- Custom Scripts -->
+  <script type="text/javascript" src="assets/js/app.min.js"></script>
+  <script type="text/javascript" src="assets/js/scripts.js"></script>
 </body>
 
 </html>
