Dashboard Page Functionality, Material Table Implemented

--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,8 @@
 <body>
   <app-root></app-root>
   <!-- Custom Scripts -->
-  <script type="text/javascript" src="assets/js/app.min.js"></script>
-  <script type="text/javascript" src="assets/js/scripts.js"></script>
+  <script src="assets/js/app.min.js"></script>
+  <script src="assets/js/scripts.js"></script>
 </body>
 
 </html>
