Add User Validation implemented, User Mgmt Table Design Done, NCD Page implemented

--- a/src/index.html
+++ b/src/index.html
@@ -14,11 +14,10 @@
   <!-- Custom Styles -->
   <link rel="stylesheet" type="text/css" href="assets/css/app.min.css">
   <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/components.css">
   <link rel="stylesheet" type="text/css" href="assets/css/custom.css">
 </head>
 
-<body>
+<body class="sidebar-mini">
   <app-root></app-root>
   <!-- Custom Scripts -->
   <script src="assets/js/app.min.js"></script>
